# OpenWork

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
OpenWorkApp/: Package.swift  README.md
OpenWorkApp/OpenWorkApp/: ContentView.swift  OpenWorkApp.swift
OpenWorkApp/OpenWorkApp/Models/: Task.swift
OpenWorkApp/OpenWorkApp/Services/: APIClient.swift  WebSocketManager.swift
OpenWorkApp/OpenWorkApp/Views/: NewTaskView.swift  SettingsView.swift  TaskDetailView.swift
examples/: basic_usage.py
openwork/: __init__.py  cli.py
openwork/agent/: __init__.py  context.py  loop.py  orchestrator.py  subagent.py
openwork/llm/: __init__.py  base.py  provider.py
openwork/llm/adapters/: __init__.py
openwork/sandbox/: __init__.py  manager.py
openwork/server/: __init__.py  app.py  websocket.py
openwork/tools/: __init__.py  base.py  bash_tool.py  code_tool.py  file_tool.py  search_tool.py  web_tool.py
openwork/ui/: __init__.py  app.py
tests/: __init__.py  test_agent.py  test_code_tool.py  test_tools.py  test_web_tool.py
