[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwork"
version = "0.1.0"
description = "Open source AI agent for local file automation - inspired by Claude Cowork"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenWork Contributors"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "automation", "llm", "claude", "openai"]

dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.28.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "openwork[ui,dev]",
]

[project.scripts]
openwork = "openwork.cli:main"

[project.urls]
Homepage = "https://github.com/neardws/OpenWork"
Repository = "https://github.com/neardws/OpenWork"
Issues = "https://github.com/neardws/OpenWork/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openwork*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
